adding Exam Example

--- a/lectures/KI-mit-Ollama.ipynb
+++ b/lectures/KI-mit-Ollama.ipynb
@@ -618,7 +618,7 @@
     "response = client.chat(model='gemma3:270m', messages=[\n",
     "  {\n",
     "    'role': 'user',\n",
-    "    'content': 'What is the best Programming Language??',\n",
+    "    'content': 'What is the best Programming Language and why is my teacher using Raku over Python for his teaching-tool-box?',\n",
     "  },\n",
     "])"
    ]
