Improved Pandas-Tutorial

--- a/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
+++ b/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
@@ -770,6 +770,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f00de470-12bc-419b-959e-399edd049259",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "Den Projektordner als Ganzes kannst du in eine zip-Datei verpacken und anschliessend auf deinen Rechner herunterladen. Das ist insbesondere nützlich, um deine Abgabe in Teams vorzubereiten oder wenn du deine Arbeit auf einen anderen Rechner übertragen willst."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd763599-b80f-477f-9345-59924d49a380",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "zip --exclude '*.ipynb_checkpoints*' --recurse-paths Pandas-Tutorial.zip ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4111886a-e469-4fc1-849d-7d05b8603fc2",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "`Pandas-Tutorial.zip` ist ein von dir vorgegebener Dateiname für das zu erstellende zip-Archiv. Mit `.` setzt du den aktuellen Ordner als Startpunkt. Mit `--recurse-paths` sorgst du dafür, dass alle Dateien und Unterordner im Archiv erfasst werden. Der Parameter `--exclude '*.ipynb_checkpoints*'` sorgt dafür, dass die Sicherheitskopien, welche verwendet werden, wenn du den \"rückgängig-machen-Knopf\" under `Edit` verwendest, nicht mit im zip-Archiv landen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "da8bcd9d-640a-49df-81ab-017408200f2b",
    "metadata": {
     "editable": true,
@@ -796,38 +841,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "zip -r bilder.zip img/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f00de470-12bc-419b-959e-399edd049259",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "Auch den Projektordner als Ganzes kannst du in eine zip-Datei verpacken und anschliessend auf deinen Rechner herunterladen. Das ist insbesondere nützlich, um deine Abgabe in Teams vorzubereiten oder wenn du deine Arbeit auf einen anderen Rechner übertragen willst."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd763599-b80f-477f-9345-59924d49a380",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "zip -r Pandas-Tutorial.zip ."
+    "zip --exclude '*.ipynb_checkpoints*' --recurse-paths bilder.zip img/"
    ]
   },
   {
@@ -966,6 +980,147 @@
     "Wenn du beispielsweise mit dem Nutzer `demo` eingeloggt bis und dieses Notebook (`edu-public-jupyter-notebooks/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb`) live präsentieren willst:\n",
     "\n",
     "http://127.0.0.1:8000/user/demo/rise/edu-public-jupyter-notebooks/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "920b2c35-9bb5-446d-824c-ac754451e1ff",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "https://mermaid.live\n",
+    "<pre>\n",
+    "```mermaid \n",
+    "flowchart TD \n",
+    "    A[Christmas] -->|Get money| B(Go shopping) \n",
+    "    B --> C{Let me think} \n",
+    "    C -->|One| D[Laptop] \n",
+    "    C -->|Two| E[iPhone] \n",
+    "    C -->|Three| F[fa:fa-car Car] \n",
+    "``` \n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "313a6a7a-6236-4e30-a17a-926d709bce9c",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "```mermaid \n",
+    "flowchart TD \n",
+    "    A[Christmas] -->|Get money| B(Go shopping) \n",
+    "    B --> C{Let me think} \n",
+    "    C -->|One| D[Laptop] \n",
+    "    C -->|Two| E[iPhone] \n",
+    "    C -->|Three| F[fa:fa-car Car] \n",
+    "``` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e4241ff-9df1-455d-aa42-2ac59ba7bd9b",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "![01_table_dataframe.svg](img/mermaid-screenshot.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6ddb2c3-aed1-427b-b202-1af5ccdc68c5",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "notes"
+    },
+    "tags": []
+   },
+   "source": [
+    "Du kannst auch https://mermaid.live Grafiken einbinden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fa51c4c-c077-44af-a9da-f39e3eaeebe5",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "<pre>\n",
+    "$$v = \\frac{s}{t}$$ \n",
+    "</pre>\n",
+    "\n",
+    "oder \n",
+    "\n",
+    "<pre>\n",
+    "$F = m \\cdot \\overrightarrow{a}$ \n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2f13898-dcbb-4ec4-8fa5-8f08ed8d0ab9",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "notes"
+    },
+    "tags": []
+   },
+   "source": [
+    "Bitten Sie ein LLM doch mal um eine mathematische Formel in LaTeX. Das sollte irgendwas in die Richtung geben."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a43586d-045a-4474-b913-70da31c18708",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "$$v = \\frac{s}{t}$$ \n",
+    "\n",
+    "$F = m \\cdot \\overrightarrow{a}$ \n",
+    "\n",
+    "<p style=\"font-size:4em\">$$a = \\sum_{i=1}^{10} 2^{i}$$</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27806c4d-124b-46c6-b5e4-1cdeabaf5aeb",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "notes"
+    },
+    "tags": []
+   },
+   "source": [
+    "style=\"font-size:4em\" a = \\sum_{i=1}^{10} 2^{i}"
    ]
   }
  ],
