Improved Pandas-Tutorial

--- a/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
+++ b/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
@@ -1088,7 +1088,7 @@
     "tags": []
    },
    "source": [
-    "Bitten Sie ein LLM doch mal um eine mathematische Formel in LaTeX. Das sollte irgendwas in die Richtung geben."
+    "Bitten Sie ein LLM doch mal um eine mathematische Formel in [LaTeX](https://www.overleaf.com/learn/latex/List_of_Greek_letters_and_math_symbols). Das sollte irgendwas in die Richtung geben:"
    ]
   },
   {
