--- a/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
+++ b/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
@@ -810,7 +810,7 @@
     "tags": []
    },
    "source": [
-    "`Pandas-Tutorial.zip` ist ein von dir vorgegebener Dateiname für das zu erstellende zip-Archiv. Mit `.` setzt du den aktuellen Ordner als Startpunkt. Mit `--recurse-paths` sorgst du dafür, dass alle Dateien und Unterordner im Archiv erfasst werden. Der Parameter `--exclude '*.ipynb_checkpoints*'` sorgt dafür, dass die Sicherheitskopien, welche verwendet werden, wenn du den \"rückgängig-machen-Knopf\" under `Edit` verwendest, nicht mit im zip-Archiv landen."
+    "`Pandas-Tutorial.zip` ist ein von dir vorgegebener Dateiname für das zu erstellende zip-Archiv. Mit `.` setzt du den aktuellen Ordner als Startpunkt. Mit `--recurse-paths` sorgst du dafür, dass alle Dateien und Unterordner im Archiv erfasst werden. Der Parameter `--exclude '*.ipynb_checkpoints*'` sorgt dafür, dass Sicherheitskopien, welche verwendet werden, wenn du `Edit -> Undo/Redo` verwendest, nicht mit im zip-Archiv landen."
    ]
   },
   {
