--- a/lectures/KI-mit-Ollama.ipynb
+++ b/lectures/KI-mit-Ollama.ipynb
@@ -435,7 +435,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ff1a991b-f0e3-4f93-9f36-74d071fc3633",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -564,7 +570,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cd746e37-5876-4d2b-b4cb-856330b8bc5b",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "show_models_from_(client.list())"
