--- a/analysen/Persönlichkeitsmerkmale/analyse.ipynb
+++ b/analysen/Persönlichkeitsmerkmale/analyse.ipynb
@@ -297,7 +297,7 @@
    },
    "outputs": [],
    "source": [
-    "rohdaten = pd.read_csv('data/Rohdaten-Persönlichkeitsmerkmale-und-ihr-Einfluss-auf-zwischenmenschliche-Beziehungen.csv', sep=\";\")\n",
+    "rohdaten = pd.read_csv('data/Rohdaten-Persönlichkeitsmerkmale-und-ihr-Einfluss-auf-zwischenmenschliche-Beziehungen.csv', sep=\";\")\n",
     "rohdaten"
    ]
   },
@@ -314,7 +314,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/Auswertung-Persönlichkeitsmerkmale-und-ihr-Einfluss-auf-zwischenmenschliche-Beziehungen.csv', sep=\";\")\n",
+    "df = pd.read_csv('data/Auswertung-Persönlichkeitsmerkmale-und-ihr-Einfluss-auf-zwischenmenschliche-Beziehungen.csv', sep=\";\")\n",
     "df"
    ]
   },
