--- a/analysen/Persönlichkeitsmerkmale/analyse.ipynb
+++ b/analysen/Persönlichkeitsmerkmale/analyse.ipynb
@@ -95,8 +95,11 @@
    "source": [
     "from ollama import Client\n",
     "\n",
-    "# Local Ollama\n",
+    "# VM Local Ollama\n",
     "client = Client(host='http://127.0.0.1:11434')\n",
+    "\n",
+    "# Host Local Ollama\n",
+    "#client = Client(host='http://10.0.2.2:11434')\n",
     "\n",
     "# see https://ollama.com/search\n",
     "#client.pull('gemma3:270m')\n",
