--- a/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
+++ b/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
@@ -911,7 +911,7 @@
     "# add svg package to first line of LaTeX file\n",
     "sed -i '1 s/.*/&\\\\usepackage{svg}/' $FILE.tex\n",
     "# LaTeX to pdf\n",
-    "xelatex --shell-escape $FILE.tex -quiet &> /dev/null\n",
+    "xelatex --shell-escape $FILE.tex -quiet -interaction='nonstopmode' &> /dev/null\n",
     "# clean up\n",
     "rm -rf svg-inkscape $FILE\\_files\n",
     "rm $FILE.aux $FILE.log $FILE.out $FILE.tex"
