Adding Ollama Cloud

--- a/lectures/KI-mit-Ollama.ipynb
+++ b/lectures/KI-mit-Ollama.ipynb
@@ -758,6 +758,223 @@
    "source": [
     "Schau dir die [Dokumentation](https://github.com/ollama/ollama-python?tab=readme-ov-file#api) der Bibliothek `ollama` an, um deine Möglichkeiten zu erkunden."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03da549e-10dc-4696-ab1c-2c733b14b6bb",
+   "metadata": {},
+   "source": [
+    "## Ollama-Cloud-Models verwenden\n",
+    "\n",
+    "Du willst noch grössere Modell nutzen, die weder in der VM noch auf deinem Host laufen? Kein Problem!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c42d671b-31e2-4b91-90af-5f45b08aeda8",
+   "metadata": {},
+   "source": [
+    "Dazu benötigst du einen API-Key. Den kannst du dir unter https://ollama.com/settings/keys selbst einrichten. Alternativ stellt dir deine Lehrperson einen Key zum Testen zur Verfügung."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29b2454a-9f54-462f-ba7c-77607acbad06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OLLAMA_API_KEY=\"234654723462t224egfsewwfwrvw4v245tvqea.8in8Dd5NcFYhzLObRIb_uz0g\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffb96809-5ad5-4670-8df1-7c926572475e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ollama import Client\n",
+    "\n",
+    "client = Client(\n",
+    "    host=\"https://ollama.com\",\n",
+    "    headers={'Authorization': 'Bearer ' + OLLAMA_API_KEY}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6e7b154-2ddd-4078-b040-5169e082e62f",
+   "metadata": {},
+   "source": [
+    "Weitere Informationen findest du unter https://docs.ollama.com/cloud#cloud-models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c63d0f1f-96ec-4dad-b806-1595fc418869",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_models_from_(client.list())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbbe50c1-74e5-4b2d-94e0-06df8798ffa3",
+   "metadata": {},
+   "source": [
+    "Wählen wir eines aus:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06fc1cde-4e8c-4387-ac1a-591c84c7ff32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cloud_model = 'gpt-oss:120b'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fa3c489-d8d8-4553-ac63-dd29092df50a",
+   "metadata": {},
+   "source": [
+    "und stellen unsere erste Frage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "366da2a3-91c4-41e6-ba39-700e5bb8d1e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = 'What are the advantages of using Pandas over Excel?'\n",
+    "\n",
+    "messages = [\n",
+    "  {\n",
+    "    'role': 'user',\n",
+    "    'content': prompt,\n",
+    "  },\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fae0352-d192-4229-a8fe-99fc0cf4d12b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.chat(cloud_model, messages=messages)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ed3a4ee-d69c-4c62-aea5-c391054850d1",
+   "metadata": {},
+   "source": [
+    "Wir bekommen Markdown-formatierten Text als Antwort."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67e8a4c1-fe61-401f-8cf1-6ed43ce40eee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(response.message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c1d5eae-997f-4c95-8f38-5bb2386a61a8",
+   "metadata": {},
+   "source": [
+    "Wenn wir uns die Ausgabe schön formatiert ausgeben lassen wollen, dann geht das bspw. so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f552320e-188c-40f8-86a1-3dc185a17469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Markdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "316aae41-23da-4877-ace5-0f580268f7d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(response.message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cbc3c81-0593-4def-9f6a-9c0e4c60f2ba",
+   "metadata": {},
+   "source": [
+    "Um den Chat fortzuführen, speichern wir die Rückgabe in die Konversation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "259cca54-6913-4ef7-92fd-bf5da7c13ded",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages.append({\"role\": \"assistant\", \"content\": response.message.content})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "476918ef-ced7-4502-a20b-a4406cd931d2",
+   "metadata": {},
+   "source": [
+    "und fügen unsere neue Frage an."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fefa9cd-da2f-45b9-a33f-d84e36c41ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"Create a small sample dataset as csv-file to be used to compare Pandas and Excel\"\n",
+    "messages.append({\"role\": \"user\", \"content\": prompt})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4e2a12b-9e8b-4ff3-a1c1-e12388b4dbe9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = client.chat(cloud_model, messages=messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5eea9761-8fb0-4d36-84fd-2e98bd419c3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(response.message.content)"
+   ]
   }
  ],
  "metadata": {
