--- a/lectures/KI-mit-Ollama.ipynb
+++ b/lectures/KI-mit-Ollama.ipynb
@@ -766,7 +766,7 @@
    "source": [
     "## Ollama-Cloud-Models verwenden\n",
     "\n",
-    "Du willst noch grössere Modell nutzen, die weder in der VM noch auf deinem Host laufen? Kein Problem!"
+    "Du willst noch grössere Modelle nutzen, die weder in der VM noch auf deinem Host vernünftig laufen? Kein Problem!"
    ]
   },
   {
