--- a/lectures/KI-mit-Ollama.ipynb
+++ b/lectures/KI-mit-Ollama.ipynb
@@ -67,7 +67,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3ec3b3e2-7ebb-48ab-8c18-fe984dc839d4",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from ollama import Client"
@@ -91,12 +97,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4aa657f2-b91f-4786-9061-46c8b2578d53",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "client = Client(\n",
-    "  host='http://127.0.0.1:11434'\n",
-    ")"
+    "client = Client( host='http://127.0.0.1:11434' )"
    ]
   },
   {
@@ -117,19 +127,71 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5cd32b0-adb2-4436-b395-27bdd13d5176",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Message senden\n",
+    "prompt = 'Why is the sky usually blue and sometimes red?'\n",
+    "\n",
     "response = client.chat(\n",
     "    model='gemma3:270m', \n",
-    "    messages=[\n",
-    "        {'role': 'user', 'content': 'Why is the sky usually blue and sometimes red?'},\n",
-    "    ]\n",
+    "    messages=[{'role': 'user', 'content': prompt},]\n",
     ")\n",
     "\n",
     "# Antwort komplett ausgeben\n",
     "print(response.message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c1d5eae-997f-4c95-8f38-5bb2386a61a8",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "Wenn wir uns die Ausgabe schön formatiert ausgeben lassen wollen, dann geht das bspw. so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f552320e-188c-40f8-86a1-3dc185a17469",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import Markdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d1ee1a2-4706-4ab0-b9da-9085e203d1bb",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "Markdown(response.message.content)"
    ]
   },
   {
@@ -161,7 +223,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c13c1964-6b8f-4baa-9fd0-a797c535cc7b",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Noch eine Nachricht senden\n",
@@ -175,7 +243,7 @@
     "\n",
     "# Diesmal die Antwort Zeile für Zeile ausgeben:\n",
     "for chunk in stream:\n",
-    "  print(chunk['message']['content'], end='', flush=True)"
+    "    print(chunk['message']['content'], end='', flush=True)"
    ]
   },
   {
@@ -876,7 +944,13 @@
   {
    "cell_type": "markdown",
    "id": "2ed3a4ee-d69c-4c62-aea5-c391054850d1",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Wir bekommen Markdown-formatierten Text als Antwort."
    ]
@@ -884,36 +958,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e8a4c1-fe61-401f-8cf1-6ed43ce40eee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(response.message.content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5c1d5eae-997f-4c95-8f38-5bb2386a61a8",
-   "metadata": {},
-   "source": [
-    "Wenn wir uns die Ausgabe schön formatiert ausgeben lassen wollen, dann geht das bspw. so:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f552320e-188c-40f8-86a1-3dc185a17469",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Markdown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "316aae41-23da-4877-ace5-0f580268f7d3",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "Markdown(response.message.content)"
