--- a/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
+++ b/analysen/Pandas-Tutorial/Pandas-Tutorial.ipynb
@@ -84,6 +84,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3685d59c-4eee-4788-83e0-4d40d1991410",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "```mermaid\n",
+    "stateDiagram-v2\n",
+    "    [*] --> Forschungsfrage\n",
+    "    Forschungsfrage --> Datenbeschaffung\n",
+    "    Datenbeschaffung --> Test\n",
+    "    Datenbeschaffung --> Produktiv\n",
+    "    Test --> Vorverarbeitung\n",
+    "    Produktiv --> Vorverarbeitung\n",
+    "    Vorverarbeitung --> Analyse\n",
+    "    Vorverarbeitung --> Test\n",
+    "    Analyse --> Visualisierung\n",
+    "    Analyse --> Vorverarbeitung\n",
+    "    Visualisierung --> Ausarbeitung\n",
+    "    Visualisierung --> Analyse\n",
+    "    Ausarbeitung --> Präsentation\n",
+    "    Ausarbeitung --> Visualisierung\n",
+    "    Präsentation --> Ausarbeitung\n",
+    "    Präsentation --> [*]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1c486900-7143-4dc9-a888-bd54db3407bb",
    "metadata": {
     "editable": true,
@@ -1140,7 +1172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.11"
   },
   "livereveal": {
    "autolaunch": true
