--- a/analysen/Biber/musterlösung/analyse_lösung.ipynb
+++ b/analysen/Biber/musterlösung/analyse_lösung.ipynb
@@ -13,11 +13,25 @@
    "id": "6dfbb2d2-c155-403d-a65c-a2702d0a736f",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "- Welche Klasse erreichte durchschnittlich die meisten/wenigsten Punkte\n",
     "- Welche Aufgabe wurde am besten/schlechtesten gelöst?\n",
     "- Welche Punkte wurden wie häufig gegeben?\n",
     "- Wie entwicklte sich die Punktezahl der gesamten Schule über die Jahre?\n",
-    "- Wie entwicklte sich die Teilnehmeranzahl der gesamten Schule über die Jahre?"
+    "- Wie entwicklte sich die Teilnehmeranzahl der gesamten Schule über die Jahre?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "[LLM-Unterhaltung](https://chatgpt.com/share/692960a7-fc98-8009-987d-c1bea38ebd59)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f478c33-7302-4472-94e9-3139ab2f873d",
+   "metadata": {},
+   "source": [
+    "Die Rohdaten sind anonymisiert, weshalb keine Namen vorkommen und die \"Klasse\" anstelle von bspw. `G1B` oder `F2A` einen zufälligen String wie `XBE` enthält. Dies verhindert Rückschlüsse auf die Leistung einzelner Schülerinnen und Schüler oder den direkten Vergleich einzelner Klassen."
    ]
   },
   {
@@ -56,9 +70,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_2024 = pd.read_csv(\"data/2024.csv\")\n",
-    "data_2025a = pd.read_csv(\"data/2025a.csv\")\n",
-    "data_2025b = pd.read_csv(\"data/2025b.csv\")"
+    "data_2024 = pd.read_csv(\"../data/2024.csv\")\n",
+    "data_2025a = pd.read_csv(\"../data/2025a.csv\")\n",
+    "data_2025b = pd.read_csv(\"../data/2025b.csv\")"
    ]
   },
   {
@@ -241,10 +255,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17f89dab-0c31-49ff-b279-95c10b6370bc",
+   "metadata": {},
+   "source": [
+    "Wir legen eine Kopie der Rohdaten an. Diese wird bspw. im Anhang verwendet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be219ca0-00d8-44b0-8621-1678ea10aa6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_copy = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cde51de7-f05e-476c-b4df-231ae47a5ad6",
    "metadata": {},
    "source": [
     "## Daten analysieren"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70611db3-f380-431a-8f4a-87bf2c14f99f",
+   "metadata": {},
+   "source": [
+    "Falls wir wieder einen frischen Rohdatensatz benötigen, genügt es, die ff. Zelle auszuführen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13a6f37d-33fe-45e7-9470-76fba805c10b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_copy.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07231246-569e-4b50-98bf-f72286014679",
+   "metadata": {},
+   "source": [
+    "Ein erster Überblick"
    ]
   },
   {
@@ -455,7 +513,7 @@
    "id": "2c28cfa6-ed03-4a28-98ec-bced1260dde0",
    "metadata": {},
    "source": [
-    "### Excel to csv"
+    "### Excel to csv und df to Excel/csv"
    ]
   },
   {
@@ -465,7 +523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel_file = \"data/Biber.xlsx\"\n",
+    "excel_file = \"../data/Biber.xlsx\"\n",
     "data_2024 = pd.read_excel(excel_file, sheet_name=\"2024\")\n",
     "data_2025a = pd.read_excel(excel_file, sheet_name=\"2025_09_10\")\n",
     "data_2025b = pd.read_excel(excel_file, sheet_name=\"2025_11_12_13\")"
@@ -478,9 +536,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_2024.to_csv(\"data/2024.csv\", index=False)\n",
-    "data_2025a.to_csv(\"data/2025a.csv\", index=False)\n",
-    "data_2025b.to_csv(\"data/2025b.csv\", index=False)"
+    "data_2024.to_csv(\"../data/2024.csv\", index=False)\n",
+    "data_2025a.to_csv(\"../data/2025a.csv\", index=False)\n",
+    "data_2025b.to_csv(\"../data/2025b.csv\", index=False)"
    ]
   },
   {
@@ -494,11 +552,87 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "91441006-3272-4ebc-8798-de0a5d926d1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_copy.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "487a2e16-d886-435c-9b12-e44d107c14ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"data/Biber-Daten-Long.csv\", index=False)"
+    "df_copy.to_csv(\"../data/Biber-Daten-Long.csv\", index=False)\n",
+    "df_copy.to_excel(\"../data/Biber-Daten-Long.xlsx\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f2fcd09-1fa3-4e63-b5e7-5f390c20fd4a",
+   "metadata": {},
+   "source": [
+    "und nochmal im Wide-Format. Dazu müssen wir einen eindeutigen Zeilenindex hinzufügen, ansonsten müssten wir `pivot_table` verwenden und Daten aggregieren - was wir ja nicht wollen beim Rohdatenexport."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c331b33-24bd-47df-a307-dcac3cf48310",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_copy.loc[:, \"row_id\"] = df_copy.groupby([\"Jahr\", \"Klassenstufe\", \"Klasse\"]).cumcount()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e117662-d830-4545-b711-45840459493e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_wide = df_copy.pivot(\n",
+    "    index=[\"Jahr\", \"Klassenstufe\", \"Klasse\", \"row_id\"], # neue Zeilen\n",
+    "    columns=\"Aufgabe\",\n",
+    "    values=\"Punkte\",\n",
+    ").reset_index()\n",
+    "\n",
+    "df_wide.drop([\"row_id\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2bf20bd-3db6-476f-bdcd-0a00764c1f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_wide.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab342a4c-3cff-492d-90aa-8fdf44f60e27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_wide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b4e85dc-d788-48ea-8582-91288d8fbcad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_wide.to_csv(\"../data/Biber-Daten-Wide.csv\", index=False)\n",
+    "df_wide.to_excel(\"../data/Biber-Daten-Wide.xlsx\", index=False)"
    ]
   },
   {
@@ -517,8 +651,8 @@
    "outputs": [],
    "source": [
     "img = df.boxplot(column='Punkte', by='Jahr', showmeans=True, grid=False)\n",
-    "img.get_figure().savefig('img/a_boxplot.svg')\n",
-    "img.get_figure().savefig('img/a_boxplot.png')"
+    "img.get_figure().savefig('../img/a_boxplot.svg')\n",
+    "img.get_figure().savefig('../img/a_boxplot.png')"
    ]
   }
  ],
