--- a/analysen/Biber/analyse.ipynb
+++ b/analysen/Biber/analyse.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "fe58677f-6ddc-4cda-ad17-ca96620ef4e3",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Biber Resultate"
    ]
@@ -11,7 +17,13 @@
   {
    "cell_type": "markdown",
    "id": "6dfbb2d2-c155-403d-a65c-a2702d0a736f",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "- Welche Klasse erreichte durchschnittlich die meisten/wenigsten Punkte\n",
     "- Welche Aufgabe wurde am besten/schlechtesten gelöst?\n",
@@ -22,7 +34,13 @@
   {
    "cell_type": "markdown",
    "id": "5ae8e8a0-0530-46ea-b769-ac227498c100",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Daten einlesen"
    ]
@@ -30,18 +48,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ab9be59-50bc-43cf-bb53-a60be229e6d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ba35f56d-e776-4a45-a463-1b9858ae4ea1",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -51,18 +65,125 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f463b521-5e73-4c48-83dd-3de08eada51e",
-   "metadata": {},
+   "id": "9ab9be59-50bc-43cf-bb53-a60be229e6d1",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/Biber.csv\")"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f463b521-5e73-4c48-83dd-3de08eada51e",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/Biber_long.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff04dc00-31eb-4286-a198-3c4984593315",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d8a2e937-5ee1-4e4e-8a44-11edfd0edf94",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a24a4e64-e915-4a79-9fa8-7c18cfa1cd4a",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "Um uns mit den Rohdaten einfacher vertraut machen zu können, benötigen wir in Jupyter noch eine Bibliothek wie `itables`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aeeaa998-dff3-46f3-9669-ed0ad2a494af",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import itables\n",
+    "\n",
+    "itables.init_notebook_mode()\n",
+    "itables.options.maxBytes = \"1024KB\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d5c10e3-7e08-43ed-abbf-332595951b31",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "Jetzt sieht die Standardausgabe eines DataFrames so aus:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "489815b7-828e-4280-8a8d-af3270549b3a",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df"
@@ -70,8 +191,88 @@
   },
   {
    "cell_type": "markdown",
+   "id": "600ce7a1-a224-4be9-b795-1c1575367419",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "source": [
+    "Zum schnellen Filtern, Durchsuchen und Exportieren der Rohdaten definieren wir noch zwei praktische Helfer-Funktionen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c1eec53-1ad0-4676-8646-22cb801296e6",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def filter_in(df):\n",
+    "    numeric_cols = df.select_dtypes(include='number').columns\n",
+    "    non_numeric_cols = df.select_dtypes(exclude='number').columns\n",
+    "    non_numeric_cols_indices = [df.columns.get_loc(c) for c in non_numeric_cols]\n",
+    "    itables.show(df, \n",
+    "                 layout={\"top1\": \"searchPanes\"},\n",
+    "                 buttons = [\"pageLength\", \"copyHtml5\", \"csvHtml5\", \"excelHtml5\"],\n",
+    "                 searchPanes={\"layout\": 'columns-' + str(len(df.columns) - len(numeric_cols)), \"cascadePanes\": True, \"columns\": non_numeric_cols_indices})\n",
+    "\n",
+    "def suche_in(df):\n",
+    "    itables.show(df,\n",
+    "                 layout={\"top1\": \"searchBuilder\" },\n",
+    "                 buttons = [\"pageLength\", \"copyHtml5\", \"csvHtml5\", \"excelHtml5\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1ad04cd-a096-44ad-87af-d6b502eb72cb",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "filter_in(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6145576-7d4f-4777-baac-fd259ba62c63",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "suche_in(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "68bec5a2-966c-421a-9205-04c5414d17cb",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Daten analysieren"
    ]
@@ -79,7 +280,13 @@
   {
    "cell_type": "markdown",
    "id": "48ec4556-8823-4489-87b4-a93b2a6a935e",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "### Welche Klasse erreichte durchschnittlich die meisten/wenigsten Punkte"
    ]
@@ -157,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
