--- a/analysen/Biber-Musterlösung/analyse.ipynb
+++ b/analysen/Biber-Musterlösung/analyse.ipynb
@@ -49,7 +49,7 @@
     "tags": []
    },
    "source": [
-    "Die Rohdaten sind anonymisiert, weshalb etwa die Spalte \"Klasse\" anstelle von bspw. `G1B` oder `F2A` einen zufälligen String wie `XBE` enthält. Dies verhindert Rückschlüsse auf die Leistung einzelner Schülerinnen und Schüler oder den direkten Vergleich einzelner Klassen."
+    "Die Rohdaten sind anonymisiert, weshalb beispielsweise die Spalte \"Klasse\" anstelle von `G1B` oder `F2A` einen zufälligen String wie `XBE` enthält. Dies verhindert Rückschlüsse auf die Leistung einzelner Schülerinnen und Schüler oder den direkten Vergleich einzelner Klassen."
    ]
   },
   {
@@ -112,7 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/Biber_long.csv\")"
+    "df = pd.read_csv(\"data/Biber-Daten-Long.csv\")"
    ]
   },
   {
@@ -132,19 +132,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cda31977-37d6-4714-9c65-e1f2d3471f8f",
+   "metadata": {},
+   "source": [
+    "Wir entfernen unnötige Spalten"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21fbcf35-70d6-4a60-a486-d3de3c049cb0",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
+   "id": "d8cafd98-9955-4717-a6f6-2980a8b224e1",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df.describe()"
+    "df = df[['Jahr', 'Klassenstufe', 'Klasse', 'Name', 'Team', 'Aufgabe', 'Punkte']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7615f376-780e-426b-9d3e-742cb2f21ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   },
   {
@@ -549,20 +561,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8786b5fa-e07a-4391-8341-4fbf09e59d78",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "source": [
-    "ToDo"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c42709a1-687d-4628-8aaa-a0564edb35f7",
@@ -575,10 +573,10 @@
    },
    "outputs": [],
    "source": [
-    "teilnehmer = {\n",
-    "    \"Jahr\": [len(data_2024), len(data_2025a) + len(data_2025b)],\n",
-    "}\n",
-    "new_df = pd.DataFrame(teilnehmer, index=[\"2024\", \"2025\"])"
+    "participants_per_year = (\n",
+    "    df.groupby(\"Jahr\")[\"Name\"]\n",
+    "      .nunique()\n",
+    ")"
    ]
   },
   {
@@ -594,7 +592,7 @@
    },
    "outputs": [],
    "source": [
-    "new_df"
+    "participants_per_year"
    ]
   },
   {
@@ -610,7 +608,7 @@
    },
    "outputs": [],
    "source": [
-    "new_df.plot.bar()"
+    "participants_per_year.plot.bar()"
    ]
   },
   {
@@ -638,7 +636,7 @@
     "tags": []
    },
    "source": [
-    "Beispielsweise so:"
+    "Bilder für Präsentationen und Dokumente sopeicherst du deispielsweise so:"
    ]
   },
   {
@@ -676,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
