--- a/analysen/Biber-Musterlösung/data_preprocessing.ipynb
+++ b/analysen/Biber-Musterlösung/data_preprocessing.ipynb
@@ -47,43 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe55ac18-e97f-4497-a3cf-2e3b4fa3033d",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "excel_file = \"data/Biber.xlsx\"\n",
-    "data_2024 = pd.read_excel(excel_file, sheet_name=\"2024\")\n",
-    "data_2025a = pd.read_excel(excel_file, sheet_name=\"2025_09_10\")\n",
-    "data_2025b = pd.read_excel(excel_file, sheet_name=\"2025_11_12_13\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c41884f1-d9d8-4b1a-8d70-6d57bb22403b",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "data_2024.to_csv(\"data/2024.csv\", index=False)\n",
-    "data_2025a.to_csv(\"data/2025a.csv\", index=False)\n",
-    "data_2025b.to_csv(\"data/2025b.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a86861c9-b516-4840-a3ab-ac1e5e5a124f",
    "metadata": {
     "editable": true,
@@ -94,9 +57,9 @@
    },
    "outputs": [],
    "source": [
-    "#data_2024 = pd.read_csv(\"data/2024.csv\")\n",
-    "#data_2025a = pd.read_csv(\"data/2025a.csv\")\n",
-    "#data_2025b = pd.read_csv(\"data/2025b.csv\")"
+    "data_2024a = pd.read_csv(\"data/2024a.csv\")\n",
+    "data_2025a = pd.read_csv(\"data/2025a.csv\")\n",
+    "data_2025b = pd.read_csv(\"data/2025b.csv\")"
    ]
   },
   {
@@ -138,10 +101,10 @@
     "tags": []
    },
    "source": [
-    "|Jahr|Klassenstufe|Klasse|Aufgabe|Punkte|\n",
-    "|--|--|--|--|--|\n",
-    "|2024|Schuljahre 11, 12 und 13|KHR|Happy Birthday|-2|\n",
-    "|...|...|...|...|...|"
+    "|Jahr|Land|Schule|Klassenstufe|Klasse|Name|Team|Aufgabe|Punkte|\n",
+    "|--|--|--|--|--|--|--|--|--|\n",
+    "|2025|NaN|NaN|Schuljahre 9 und 10|MAK|kygrj|NaN|Bebrasien|-2|\n",
+    "|...|...|...|...|...|...|...|...|...|"
    ]
   },
   {
@@ -157,9 +120,9 @@
    },
    "outputs": [],
    "source": [
-    "data_2024_long = pd.melt(\n",
-    "    data_2024,\n",
-    "    id_vars=['Jahr', 'Klassenstufe', 'Klasse'],     # columns that stay as identifiers\n",
+    "data_2024a_long = pd.melt(\n",
+    "    data_2024a,\n",
+    "    id_vars=['Jahr', 'Land', 'Schule', 'Klassenstufe', 'Klasse', 'Name', 'Team'],     # columns that stay as identifiers\n",
     "    var_name='Aufgabe',   # name for the new \"variable\" column\n",
     "    value_name='Punkte'     # name for the new \"value\" column\n",
     ")"
@@ -180,7 +143,7 @@
    "source": [
     "data_2025a_long = pd.melt(\n",
     "    data_2025a,\n",
-    "    id_vars=['Jahr', 'Klassenstufe', 'Klasse'],\n",
+    "    id_vars=['Jahr', 'Land', 'Schule', 'Klassenstufe', 'Klasse', 'Name', 'Team'],\n",
     "    var_name='Aufgabe',\n",
     "    value_name='Punkte'\n",
     ")"
@@ -201,7 +164,7 @@
    "source": [
     "data_2025b_long = pd.melt(\n",
     "    data_2025b,\n",
-    "    id_vars=['Jahr', 'Klassenstufe', 'Klasse'],\n",
+    "    id_vars=['Jahr', 'Land', 'Schule', 'Klassenstufe', 'Klasse', 'Name', 'Team'],\n",
     "    var_name='Aufgabe',\n",
     "    value_name='Punkte'\n",
     ")"
@@ -234,7 +197,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.concat([data_2024_long, data_2025a_long, data_2025b_long])"
+    "df = pd.concat([data_2024a_long, data_2025a_long, data_2025b_long])"
    ]
   },
   {
@@ -311,23 +274,7 @@
     "tags": []
    },
    "source": [
-    "und nochmal im Wide-Format. Dazu müssen wir einen eindeutigen Zeilenindex hinzufügen, ansonsten müssten wir `pivot_table` verwenden und Daten aggregieren - was wir ja nicht wollen beim Rohdatenexport."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c331b33-24bd-47df-a307-dcac3cf48310",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df.loc[:, \"row_id\"] = df.groupby([\"Jahr\", \"Klassenstufe\", \"Klasse\"]).cumcount()"
+    "und nochmal im Wide-Format."
    ]
   },
   {
@@ -344,12 +291,10 @@
    "outputs": [],
    "source": [
     "df_wide = df.pivot(\n",
-    "    index=[\"Jahr\", \"Klassenstufe\", \"Klasse\", \"row_id\"], # neue Zeilen\n",
+    "    index=['Jahr', 'Land', 'Schule', 'Klassenstufe', 'Klasse', 'Name', 'Team'], # neue Zeilen\n",
     "    columns=\"Aufgabe\",\n",
     "    values=\"Punkte\",\n",
-    ").reset_index()\n",
-    "\n",
-    "df_wide.drop([\"row_id\"], axis=1, inplace=True)"
+    ").reset_index()"
    ]
   },
   {
@@ -450,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
