--- a/analysen/Biber/analyse.ipynb
+++ b/analysen/Biber/analyse.ipynb
@@ -25,10 +25,15 @@
     "tags": []
    },
    "source": [
+    "---\n",
+    "\n",
     "- Welche Klasse erreichte durchschnittlich die meisten/wenigsten Punkte\n",
     "- Welche Aufgabe wurde am besten/schlechtesten gelöst?\n",
     "- Welche Punkte wurden wie häufig gegeben?\n",
-    "- Wie entwicklte sich die durchschnittliche Punktezahl der gesamten Schule über die Jahre?"
+    "- Wie entwicklte sich die durchschnittliche Punktezahl der gesamten Schule über die Jahre?\n",
+    "- Wie entwicklte sich die Teilnehmeranzahl der gesamten Schule über die Jahre?\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -91,7 +96,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/Biber_long.csv\")"
+    "df = pd.read_csv(\"data/Biber-Daten-Long.csv\")"
    ]
   },
   {
@@ -105,6 +110,34 @@
     },
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f7cbf56-e144-4dfb-8d3b-df06e1e397e9",
+   "metadata": {},
+   "source": [
+    "Wir entfernen unnötige Spalten"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b4ee4f3-7317-4f24-b610-ec03a7e364a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['Jahr', 'Klassenstufe', 'Klasse', 'Name', 'Team', 'Aufgabe', 'Punkte']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6c04f03-503e-40ec-b1c3-fc96d1c7eaca",
+   "metadata": {},
    "outputs": [],
    "source": [
     "df"
@@ -346,6 +379,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0821b31-96b5-4ffe-be9f-6f9f713620f1",
+   "metadata": {},
+   "source": [
+    "### Wie entwicklte sich die Teilnehmeranzahl der gesamten Schule über die Jahre?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5363a8f-1a47-4b5a-bdf8-43e81c563c6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -364,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
