--- a/analysen/Biber-Musterlösung/data_preprocessing.ipynb
+++ b/analysen/Biber-Musterlösung/data_preprocessing.ipynb
@@ -11,7 +11,14 @@
     "tags": []
    },
    "source": [
-    "# Biber Resultate Pre-Processing"
+    "# Biber Resultate Pre-Processing\n",
+    "\n",
+    "- Download Raw Data from https://wettbewerb.informatik-biber.ch/admin/\n",
+    "- Konvertiere Excel-Tabs zu CSV-Files mittels \"Save As\" in Excel, UTF8-kodiert\n",
+    "- Verwende `biber-preprocess.raku pfad/zu/csv/dateien/` zum Anonymisieren der gesamten Rohdaten\n",
+    "- Kopiere anonymisierte Rohdaten nach data/\n",
+    "- Verwende dieses Notebook, um ein Biber-Long-Format.csv zu erzeugen, in der alle Rohdaten enthalten sind.\n",
+    "- Schülerinnen und Schüler arbeiten mit Biber-Long-Format.csv"
    ]
   },
   {
@@ -41,7 +48,7 @@
     "tags": []
    },
    "source": [
-    "## Excel to csv und df to Excel/csv"
+    "## Multi CSV Files zu Long-Format"
    ]
   },
   {
